
                     ngIRCd - Next Generation IRC Server

                      (c)2001-2004 by Alexander Barton,
                    alex@barton.de, http://www.barton.de/

               ngIRCd is free software and published under the
                   terms of the GNU General Public License.

                               -- ChangeLog --


ngIRCd CVSHEAD

  - Changed the reply of the MODE command to match the syntax of the
    original ircd exactly: the unnecessary but missing ":" before the last
    parameter has been added.
  - Fixed TRACE: don't output "Serv" lines for ourself; display more info.
  - Results of the resolver (hostnames and IDENT names) are discarded after
    the client is successfully registered with the server.
  - Better logging while establishing and shutting down connections.
  - The type of service (TOS) of all sockets is set to "interactive" now.
  - Added short command line option "-t" as alternative to "--configtest".
  - Added optional support for "IDENT" lookups on incoming connections. You
    have to enable this function with the ./configure switch "--with-ident".
    The default is not to do IDENT lookups.

ngIRCd 0.7.7 (2004-02-05)

  - The info text ("real name") of users is set to "-" if none has been
    specified using the USER command (e. g. "USER user * * :"). Reason:
    the original ircd doesn't like empty ones and would KILL such users.
  - Fixed (optional) TCP Wrapper test which was broken and could result in
    false results. Thanks to Fuminori Tanizaki <tany@mcnet.ad.jp>!
  - Removed "USE_" prefixes of configuration #defines.

ngIRCd 0.7.6 (2003-12-05)

  - Fixed abort() ("server crash") when INVITE'ing users to nonexistent
    channels. Bug found by <hiddenx@wp.pl>.
  - Extended version numbering of CVS versions (added date).
  - Enhanced/fixed doc/Protocol.txt;

ngIRCd 0.7.5 (2003-11-07)

  - Fixed ban behavior: users which are banned from a channel can't no