@@ -14,7 +14,7 @@
 
 #include "portab.h"
 
-static char UNUSED id[] = "$Id: irc-channel.c,v 1.26 2004/03/11 22:16:31 alex Exp $";
+static char UNUSED id[] = "$Id: irc-channel.c,v 1.27 2004/04/09 20:46:48 alex Exp $";
 
 #include "imp.h"
 #include <assert.h>
@@ -86,7 +86,7 @@ IRC_JOIN( CLIENT *Client, REQUEST *Req )
 			}
 		}
 
-		/* Lokaler Client? */
+		/* Local client? */
 		if( Client_Type( Client ) == CLIENT_USER )
 		{
 			/* Test if the user has reached his maximum channel count */
@@ -158,6 +158,16 @@ IRC_JOIN( CLIENT *Client, REQUEST *Req )
 					continue;
 				}
 			}
+		}
+		else
+		{
+			/* Remote server: we don't need to know whether the
+			 * client is invited or not, but we have to make sure
+			 * that the "one shot" entries (generated by INVITE
+			 * commands) in this list become deleted when a user
+			 * joins a channel this way. */
+			chan = Channel_Search( channame );
+			if( chan != NULL ) (VOID)Lists_CheckInvited( target, chan );
 		}
 
 		/* Channel joinen (und ggf. anlegen) */
